030-software/fluxcd/apps/yaade/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yaade
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: yaade
  template:
    metadata:
      labels:
        app: yaade
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchLabels:
                    app: yaade
      automountServiceAccountToken: false
      containers:
        - name: yaade
          image: ghcr.io/esperotech/yaade:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 9339
              name: http
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: tmp
              mountPath: /app/data
      volumes:
        - name: tmp
          emptyDir: {}
