030-software/fluxcd/apps/yaade/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: yaade
spec:
  selector:
    app: yaade
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
