030-software/fluxcd/apps/yaade/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yaade
spec:
  hostnames:
  - yaade.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: yaade
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
